--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false, // Set strict to false to disable strict type checking
+    "noImplicitAny": false, // Allow 'any' types without explicit annotations
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -18,9 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/": ["./"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "/.ts", "/.tsx", ".next/types//*.ts"],
   "exclude": ["node_modules"]
 }
